<resources>
    <string name="app_name">Android-weather</string>
    <string name="header">Weather</string>
    <string name="cityName">City</string>
    <string name="temperatureValue">Temperature</string>
    <string name="settingsButtonText">Settings</string>
    <string name="weatherDescription">Description</string>
    <string name="neighborhoodName">Neighborhood</string>
    <string name="windSpeed">Wind speed</string>
    <string name="settingsButton">Settings</string>
    <string name="settingsHeader">Settings</string>
    <string name="metricsRadioButton">Metric</string>
    <string name="imperialRadioButton" translatable="false">US</string>
    <string name="unitsRadioGroupTextView">Units</string>
    <string name="saveSettingsButton">Save</string>
    <string name="useGPSLocationTextView">Use GPS location</string>
    <string name="cityInputLabel">City</string>
</resources>