<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsHeaderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/settingsHeader"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/unitsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:checkedButton="@id/metricsRadioButton"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeaderTextView">

        <RadioButton
            android:id="@+id/metricsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/metricsRadioButton" />

        <RadioButton
            android:id="@+id/imperialRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/imperialRadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/unitsRadioGroupTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeaderTextView" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="saveSettings"
        android:text="@string/saveSettingsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>